默认图库按照添加时间排序

--- a/changelog
+++ b/changelog
@@ -10,6 +10,11 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ### Added
 - 增加用户进行分享图库等操作的功能
 
+## [2.0.1] - 2026-02-25
+
+### Added
+- 增加图库按照添加时间排序的功能
+
 ## [1.2.0] - 2026-02-01
 
 ### Changed
